Nova seção de ebooks

--- a/index.html
+++ b/index.html
@@ -612,11 +612,11 @@
                </h2>
 
                <div class="new__container container">
-                  <div class="new__swiper">
-                     <div>
+                  <div class="new-swiper swiper">
+                     <div class="swiper-wrapper">
                         <!--NEW BOOKS 01  -->
-                        <a href="#" class="new__card">
-                           <img src="assets/img/1.png" alt="" class="new__img">
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/1.png" alt="image" class="new__img">
                            <div>
                               <h2 class="new__title">Descomplicando o Imposto de Renda</h2>
                               <div class="new__prices">
@@ -634,11 +634,11 @@
                            </div>
                         </a>
                         <!-- NEW BOOKS 02 -->
-                        <a href="#" class="new__card">
-                           <img src="assets/img/2.png" alt="" class="new__img">
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/2.png" alt="image" class="new__img">
                            <div>
                               <h2 class="new__title">Construindo seu Futuro Financeiro</h2>
-                              <h4 class="new__title">Verdades e mitos sobre Investimentos</h4>
+                              <h4 class="new__Sub">Verdades e mitos sobre Investimentos</h4>
                               <div class="new__prices">
                                  <span class="new__discount">R$ 10,00</span>
                                  <span class="new__price">R$ 15.00</span>
@@ -654,11 +654,11 @@
                            </div>
                         </a>
                         <!-- NEW BOOKS 03 -->
-                        <a href="#" class="new__card">
-                           <img src="assets/img/3.png" alt="" class="new__img">
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/3.png" alt="image" class="new__img">
                            <div>
                               <h2 class="new__title">Desvendando os Numeros</h2>
-                              <h4 class="new__title">Contabilidade prática para Microempreendedores Individuais MEI</h4>
+                              <h4 class="new__Sub">Contabilidade prática para Microempreendedores Individuais MEI</h4>
                               <div class="new__prices">
                                  <span class="new__discount">R$ 10,00</span>
                                  <span class="new__price">R$ 15.00</span>
@@ -674,11 +674,11 @@
                            </div>
                         </a>
                         <!-- NEW BOOK 04 -->
-                        <a href="#" class="new__card">
-                           <img src="assets/img/4.png" alt="" class="new__img">
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/4.png" alt="image" class="new__img">
                            <div>
                               <h2 class="new__title">Tributação Inteligente</h2>
-                              <h4 class="new__title">Estrategias para Empresas no Simples Nacional</h4>
+                              <h4 class="new__Sub">Estrategias para Empresas no Simples Nacional</h4>
                               <div class="new__prices">
                                  <span class="new__discount">R$ 10,00</span>
                                  <span class="new__price">R$ 15.00</span>
@@ -694,11 +694,11 @@
                            </div>
                         </a>
                         <!-- NEW BOOKS 05 -->
-                        <a href="#" class="new__card">
-                           <img src="assets/img/5.png" alt="" class="new__img">
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/5.png" alt="image" class="new__img">
                            <div>
                               <h2 class="new__title">Maximizando Lucros e Minimizando Impostos</h2>
-                              <h4 class="new__title">Um Guia Para Empresas Tributadas no Lucro Presumido</h4>
+                              <h4 class="new__Sub">Um Guia Para Empresas Tributadas no Lucro Presumido</h4>
                               <div class="new__prices">
                                  <span class="new__discount">R$ 10,00</span>
                                  <span class="new__price">R$ 15.00</span>
@@ -714,11 +714,11 @@
                            </div>
                         </a>
                         <!-- NEW BOOKS 06 -->
-                        <a href="#" class="new__card">
-                           <img src="assets/img/6.png" alt="" class="new__img">
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/6.png" alt="image" class="new__img">
                            <div>
                               <h2 class="new__title">Estratégia Tributárias Para Empresas do Lucro Real</h2>
-                              <h4 class="new__title">Maximizando Ganhos e Minimizando Riscos Fiscais</h4>
+                              <h4 class="new__Sub">Maximizando Ganhos e Minimizando Riscos Fiscais</h4>
                               <div class="new__prices">
                                  <span class="new__discount">R$ 10,00</span>
                                  <span class="new__price">R$ 15.00</span>
@@ -734,11 +734,11 @@
                            </div>
                         </a>
                         <!-- NEW BOOKS 07 -->
-                        <a href="#" class="new__card">
-                           <img src="assets/img/7.png" alt="" class="new__img">
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/7.png" alt="image" class="new__img">
                            <div>
                               <h2 class="new__title">Horas Extras</h2>
-                              <h4 class="new__title">Estrategias Para Cumprir a Lei e Evitar Irregularidades no Ambiente de Trabalho</h4>
+                              <h4 class="new__Sub">Estrategias Para Cumprir a Lei e Evitar Irregularidades no Ambiente de Trabalho</h4>
                               <div class="new__prices">
                                  <span class="new__discount">R$ 10,00</span>
                                  <span class="new__price">R$ 15.00</span>
@@ -754,11 +754,11 @@
                            </div>
                         </a>
                         <!-- NEW BOOKS 08 -->
-                        <a href="#" class="new__card">
-                           <img src="assets/img/8.png" alt="" class="new__img">
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/8.png" alt="image" class="new__img">
                            <div>
                               <h2 class="new__title">Departamento Pessoal</h2>
-                              <h4 class="new__title">Estratégias e Praticas Para Empresários e Colaboradores do DP</h4>
+                              <h4 class="new__Sub">Estratégias e Praticas Para Empresários e Colaboradores do DP</h4>
                               <div class="new__prices">
                                  <span class="new__discount">R$ 10,00</span>
                                  <span class="new__price">R$ 15.00</span>
@@ -774,11 +774,195 @@
                            </div>
                         </a>
                         <!-- NEW BOOKS 09 -->
-                        <a href="#" class="new__card">
-                           <img src="assets/img/9.png" alt="" class="new__img">
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/9.png" alt="image" class="new__img">
                            <div>
-                              <h2 class="new__title">Do Tribunal ao Escritorio - Como Evitar o Passivo Trabalhista</h2>
-                              <h4 class="new__title">Entendendo os Impactos das Decisões Judiciais no Ambiente Empresarial</h4>
+                              <h2 class="new__title">Do Tribunal ao Escritorio</h2>
+                              <h4 class="new__Sub">Como Evitar o Passivo Trabalhista</h4>
+                              <div class="new__prices">
+                                 <span class="new__discount">R$ 10,00</span>
+                                 <span class="new__price">R$ 15.00</span>
+                              </div>
+
+                              <div class="new__stars">
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-half-fill"></i>
+                              </div>
+                           </div>
+                        </a>
+                     </div>
+                  </div>
+                  <!-- New Books Seção 2 -->
+                  <div class="new-swiper swiper">
+                     <div class="swiper-wrapper">
+                        <!--NEW BOOKS 01  -->
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/9.png" alt="image" class="new__img">
+                           <div>
+                              <h2 class="new__title">Descomplicando o Imposto de Renda</h2>
+                              <div class="new__prices">
+                                 <span class="new__discount">R$ 10,00</span>
+                                 <span class="new__price">R$ 15.00</span>
+                              </div>
+
+                              <div class="new__stars">
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-half-fill"></i>
+                              </div>
+                           </div>
+                        </a>
+                        <!-- NEW BOOKS 02 -->
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/8.png" alt="image" class="new__img">
+                           <div>
+                              <h2 class="new__title">Construindo seu Futuro Financeiro</h2>
+                              <h4 class="new__Sub">Verdades e mitos sobre Investimentos</h4>
+                              <div class="new__prices">
+                                 <span class="new__discount">R$ 10,00</span>
+                                 <span class="new__price">R$ 15.00</span>
+                              </div>
+
+                              <div class="new__stars">
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-half-fill"></i>
+                              </div>
+                           </div>
+                        </a>
+                        <!-- NEW BOOKS 03 -->
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/7.png" alt="image" class="new__img">
+                           <div>
+                              <h2 class="new__title">Desvendando os Numeros</h2>
+                              <h4 class="new__Sub">Contabilidade prática para Microempreendedores Individuais MEI</h4>
+                              <div class="new__prices">
+                                 <span class="new__discount">R$ 10,00</span>
+                                 <span class="new__price">R$ 15.00</span>
+                              </div>
+
+                              <div class="new__stars">
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-half-fill"></i>
+                              </div>
+                           </div>
+                        </a>
+                        <!-- NEW BOOK 04 -->
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/6.png" alt="image" class="new__img">
+                           <div>
+                              <h2 class="new__title">Tributação Inteligente</h2>
+                              <h4 class="new__Sub">Estrategias para Empresas no Simples Nacional</h4>
+                              <div class="new__prices">
+                                 <span class="new__discount">R$ 10,00</span>
+                                 <span class="new__price">R$ 15.00</span>
+                              </div>
+
+                              <div class="new__stars">
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-half-fill"></i>
+                              </div>
+                           </div>
+                        </a>
+                        <!-- NEW BOOKS 05 -->
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/1.png" alt="image" class="new__img">
+                           <div>
+                              <h2 class="new__title">Maximizando Lucros e Minimizando Impostos</h2>
+                              <h4 class="new__Sub">Um Guia Para Empresas Tributadas no Lucro Presumido</h4>
+                              <div class="new__prices">
+                                 <span class="new__discount">R$ 10,00</span>
+                                 <span class="new__price">R$ 15.00</span>
+                              </div>
+
+                              <div class="new__stars">
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-half-fill"></i>
+                              </div>
+                           </div>
+                        </a>
+                        <!-- NEW BOOKS 06 -->
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/5.png" alt="image" class="new__img">
+                           <div>
+                              <h2 class="new__title">Estratégia Tributárias Para Empresas do Lucro Real</h2>
+                              <h4 class="new__Sub">Maximizando Ganhos e Minimizando Riscos Fiscais</h4>
+                              <div class="new__prices">
+                                 <span class="new__discount">R$ 10,00</span>
+                                 <span class="new__price">R$ 15.00</span>
+                              </div>
+
+                              <div class="new__stars">
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-half-fill"></i>
+                              </div>
+                           </div>
+                        </a>
+                        <!-- NEW BOOKS 07 -->
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/4.png" alt="image" class="new__img">
+                           <div>
+                              <h2 class="new__title">Horas Extras</h2>
+                              <h4 class="new__Sub">Estrategias Para Cumprir a Lei e Evitar Irregularidades no Ambiente de Trabalho</h4>
+                              <div class="new__prices">
+                                 <span class="new__discount">R$ 10,00</span>
+                                 <span class="new__price">R$ 15.00</span>
+                              </div>
+
+                              <div class="new__stars">
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-half-fill"></i>
+                              </div>
+                           </div>
+                        </a>
+                        <!-- NEW BOOKS 08 -->
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/3.png" alt="image" class="new__img">
+                           <div>
+                              <h2 class="new__title">Departamento Pessoal</h2>
+                              <h4 class="new__Sub">Estratégias e Praticas Para Empresários e Colaboradores do DP</h4>
+                              <div class="new__prices">
+                                 <span class="new__discount">R$ 10,00</span>
+                                 <span class="new__price">R$ 15.00</span>
+                              </div>
+
+                              <div class="new__stars">
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-fill"></i>
+                                 <i class="ri-star-half-fill"></i>
+                              </div>
+                           </div>
+                        </a>
+                        <!-- NEW BOOKS 09 -->
+                        <a href="#" class="new__card swiper-slide">
+                           <img src="assets/img/2.png" alt="image" class="new__img">
+                           <div>
+                              <h2 class="new__title">Do Tribunal ao Escritorio</h2>
+                              <h4 class="new__Sub">Como Evitar o Passivo Trabalhista</h4>
                               <div class="new__prices">
                                  <span class="new__discount">R$ 10,00</span>
                                  <span class="new__price">R$ 15.00</span>
@@ -798,7 +982,7 @@
                </div>
             </section>
             <!-- fim do New Books -->
-            
+
             <!--==================== JOIN ====================-->
             <section class="join section">
                
