--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                      </li>
                      <!-- <i class="ri-shopping-basket-line"></i> -->
                      <li class="nav__item">
-                        <a href="#" class="nav__link">
+                        <a href="#infoprodutos" class="nav__link">
                            <i class="ri-shopping-basket-line"></i>
                            <span>Infoprodutos</span>
                         </a>
@@ -396,13 +396,13 @@
 
             <!--==================== Infoprodutos ====================-->
 
-            <section class="featured section" id="featured">
+            <section class="featured section" id="infoprodutos">
                <h2 class="section__title">
                   <i class="ri-lightbulb-line">Infoprodutos</i>
                </h2>
 
                <div class="featured__container container">
-                  <div class="swiper-featured swiper">
+                  <div class="swiper-infoprodutos swiper">
                      <div class="swiper-wrapper">
                         <!-- Livro 01 -->
                         <article class="featured__card swiper-slide">
