Novas atualizações com img html css e js

--- a/index.html
+++ b/index.html
@@ -985,7 +985,21 @@
 
             <!--==================== JOIN ====================-->
             <section class="join section">
-               
+               <div class="join__container">
+                  <img src="assets/img/join-bg4.png" alt="image" class="join__bg">
+
+                  <div class="join__data container grid">
+                     <h2 class="join__title section__title">
+                        Inscreva-se para receber <br>
+                        As últimas atualizações
+                     </h2>
+
+                     <form action="" class="join__form">
+                        <input type="email" placeholder="Escreva seu email" class="join__input">
+                        <button type="submit" class="join__buton button">Enviar</button>
+                     </form>
+                  </div>
+               </div>
             </section>
 
             <!--==================== TESTIMONIAL ====================-->
