--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,86 @@
 
             <!--==================== TESTIMONIAL ====================-->
             <section class="testimonial section" id="testimonial">
-               
+               <h2 class="section__title">
+                  Opiniões dos clientes
+               </h2>
+
+               <div class="testimonial__container container">
+                  <div class="testimonial__swiper">
+                     <div>
+                        <!-- Inicio Testemunho 01 -->
+                        <article class="testimonial__car">
+                           <img src="assets/img/testimonial-perfil-1.png" alt="image" class="testimonial__img">
+                           <h2 class="testimonial__title">Camila</h2>
+                           <p class="testimolial__description">
+                              E um ótmo site para comprar e-books, aqui encontrei
+                              conteudo sobre contabilidade para a minha empresaa
+                              e a compra foi muito fácil de fazer e tem ótimos descontos.
+                           </p>
+
+                           <div class="testimonial__stars">
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-half-fill"></i>
+                           </div>
+                        </article>
+                        <!-- Inicio Testemunho 02 -->
+                        <article class="testimonial__car">
+                           <img src="assets/img/testimonial-perfil-2.png" alt="image" class="testimonial__img">
+                           <h2 class="testimonial__title">Ingride</h2>
+                           <p class="testimolial__description">
+                              Estava procurando um site para minha empresa
+                              e encontrei o que estava precisando aqui.
+                           </p>
+
+                           <div class="testimonial__stars">
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-half-fill"></i>
+                           </div>
+                        </article>
+                        <!-- Inicio Testemunho 03 -->
+                        <article class="testimonial__car">
+                           <img src="assets/img/testimonial-perfil-3.png" alt="image" class="testimonial__img">
+                           <h2 class="testimonial__title">Pedro</h2>
+                           <p class="testimolial__description">
+                              Estava procurando uma Landing page, pra divulgar meus serviços
+                              e encontrei aqui com um otmo desconto.
+                           </p>
+
+                           <div class="testimonial__stars">
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-half-fill"></i>
+                           </div>
+                        </article>
+                        <!-- Inicio Testemunho 04 -->
+                        <article class="testimonial__car">
+                           <img src="assets/img/testimonial-perfil-4.png" alt="image" class="testimonial__img">
+                           <h2 class="testimonial__title">Phillipe</h2>
+                           <p class="testimolial__description">
+                              Estava procurando um Informação que me ajudasse a tratar de um assunto
+                              especifico de contabilidade e Finanças encontrei o e-book perfeito aqui,
+                              e com um ótimos desconto.
+                           </p>
+
+                           <div class="testimonial__stars">
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-half-fill"></i>
+                           </div>
+                        </article>
+                     </div>
+                  </div>
+               </div>
             </section>
          </main>
 
