terminando os comentários dos clientes

--- a/index.html
+++ b/index.html
@@ -1009,13 +1009,13 @@
                </h2>
 
                <div class="testimonial__container container">
-                  <div class="testimonial__swiper">
-                     <div>
+                  <div class="testimonial__swiper swiper">
+                     <div class="swiper-wrapper">
                         <!-- Inicio Testemunho 01 -->
-                        <article class="testimonial__car">
+                        <article class="testimonial__card swiper-slide">
                            <img src="assets/img/testimonial-perfil-1.png" alt="image" class="testimonial__img">
                            <h2 class="testimonial__title">Camila</h2>
-                           <p class="testimolial__description">
+                           <p class="testimonial__description">
                               E um ótmo site para comprar e-books, aqui encontrei
                               conteudo sobre contabilidade para a minha empresaa
                               e a compra foi muito fácil de fazer e tem ótimos descontos.
@@ -1030,10 +1030,10 @@
                            </div>
                         </article>
                         <!-- Inicio Testemunho 02 -->
-                        <article class="testimonial__car">
+                        <article class="testimonial__card swiper-slide">
                            <img src="assets/img/testimonial-perfil-2.png" alt="image" class="testimonial__img">
                            <h2 class="testimonial__title">Ingride</h2>
-                           <p class="testimolial__description">
+                           <p class="testimonial__description">
                               Estava procurando um site para minha empresa
                               e encontrei o que estava precisando aqui.
                            </p>
@@ -1047,10 +1047,10 @@
                            </div>
                         </article>
                         <!-- Inicio Testemunho 03 -->
-                        <article class="testimonial__car">
+                        <article class="testimonial__card swiper-slide">
                            <img src="assets/img/testimonial-perfil-3.png" alt="image" class="testimonial__img">
                            <h2 class="testimonial__title">Pedro</h2>
-                           <p class="testimolial__description">
+                           <p class="testimonial__description">
                               Estava procurando uma Landing page, pra divulgar meus serviços
                               e encontrei aqui com um otmo desconto.
                            </p>
@@ -1064,10 +1064,10 @@
                            </div>
                         </article>
                         <!-- Inicio Testemunho 04 -->
-                        <article class="testimonial__car">
+                        <article class="testimonial__card swiper-slide">
                            <img src="assets/img/testimonial-perfil-4.png" alt="image" class="testimonial__img">
                            <h2 class="testimonial__title">Phillipe</h2>
-                           <p class="testimolial__description">
+                           <p class="testimonial__description">
                               Estava procurando um Informação que me ajudasse a tratar de um assunto
                               especifico de contabilidade e Finanças encontrei o e-book perfeito aqui,
                               e com um ótimos desconto.
