footer html com as redes sociais

--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,106 @@
 
          <!--==================== FOOTER ====================-->
          <footer class="footer">
-            
+            <div class="footer__container container grid">
+               <div>
+                  <a href="#" class="footer__logo">
+                     <img src="assets/img/mindshift.png" class="nav__logo">Produtos Digitais
+                  </a>
+
+                  <p class="footer__description">
+                     Encontre e explore os melhores produtos digitais e<br>
+                     e-books de Contabilidade e Tecnologia<br>
+                     com os melhores preços.
+                  </p>
+               </div>
+
+               <div class="footer__data grid">
+                  <div>
+                     <!-- 01 -->
+                     <h3 class="footer__title">Sobre</h3>
+
+                     <ul class="footer__links">
+                        <li>
+                           <a href="#" class="footer__link">Prêmios</a>
+                        </li>
+
+                        <li>
+                           <a href="#" class="footer__link">Perguntas frequentes</a>
+                        </li>
+
+                        <li>
+                           <a href="#" class="footer__link">Política de Privacidade</a>
+                        </li>
+
+                        <li>
+                           <a href="#" class="footer__link">Termos de serviços</a>
+                        </li>
+                     </ul>
+                  </div>
+                  <!-- 02 -->
+                  <div>
+                     <h3 class="footer__title">Empresa</h3>
+
+                     <ul class="footer__links">
+                        <li>
+                           <a href="#" class="footer__link">Blogs</a>
+                        </li>
+
+                        <li>
+                           <a href="#" class="footer__link">Comunidade</a>
+                        </li>
+
+                        <li>
+                           <a href="#" class="footer__link">Nosso time</a>
+                        </li>
+                        
+                        <li>
+                           <a href="#" class="footer__link">Central de ajuda</a>
+                        </li>
+                     </ul>
+                  </div>
+                  <!-- 03 -->
+                  <div>
+                     <h3 class="footer__title">Contato</h3>
+
+                     <ul class="footer__links">
+                        <li>
+                           <address class="footer__info">
+                              Av. Das Acacias <br>
+                              ST - MG Brasil
+                           </address>
+                        </li>
+
+                        <li>
+                           <address class="footer__info">
+                              mindshiftconsultoriacontabil@gmail.com<br>
+                              +55 (31) 97534-0765
+                           </address>
+                        </li>
+                     </ul>
+                  </div>
+                  <!-- 04 -->
+                  <div>
+                     <h3 class="footer__title">Redes Sociais</h3>
+
+                     <div class="footer__social">
+                        <a href="https://www.instagram.com/mindshiftconsultoria/" target="_blank" class="footer__social-link">
+                           <i class="ri-instagram-line"></i>
+                        </a>
+                        <a href="https://github.com/igormauriciomota" target="_blank" class="footer__social-link">
+                           <i class="ri-github-line"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/igor-mota-320872274/" target="_blank" class="footer__social-link">
+                           <i class="ri-linkedin-box-line"></i>
+                        </a>
+                     </div>
+                  </div>
+               </div>
+            </div>
+
+            <spam class="footer__copy">
+               &#169; Todos os direitos reservados por mindshift.tp 2024
+            </spam>
          </footer>
 
          <!--========== SCROLL UP ==========-->
