--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
             <div class="footer__container container grid">
                <div>
                   <a href="#" class="footer__logo">
-                     <img src="assets/img/mindshift.png" class="nav__logo">Produtos Digitais
+                     <img src="assets/img/mindshift.png" width="150px" height="150px">Produtos Digitais
                   </a>
 
                   <p class="footer__description">
@@ -1187,7 +1187,7 @@
             </div>
 
             <spam class="footer__copy">
-               &#169; Todos os direitos reservados por mindshift.tp 2024
+               &#169; Todos os direitos reservados por mindshift.top 2024
             </spam>
          </footer>
 
