novas imagens e adicionar testemunhos

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                      <li class="nav__item">
                         <a href="#featured" class="nav__link">
                            <i class="ri-book-3-line"></i>
-                           <span>Featured</span>
+                           <span>E-Books</span>
                         </a>
                      </li>
                      <!-- <i class="ri-shopping-basket-line"></i> -->
@@ -50,21 +50,21 @@
                      <li class="nav__item">
                         <a href="#discount" class="nav__link">
                            <i class="ri-price-tag-3-line"></i>
-                           <span>Discount</span>
+                           <span>Desconto</span>
                         </a>
                      </li>
                      <!--  -->
                      <li class="nav__item">
                         <a href="#new" class="nav__link">
                            <i class="ri-bookmark-line"></i>
-                           <span>New Books</span>
+                           <span>Novos e-Books</span>
                         </a>
                      </li>
                      <!--  -->
                      <li class="nav__item">
                         <a href="#testimonial" class="nav__link">
                            <i class="ri-message-3-line"></i>
-                           <span>Testimonial</span>
+                           <span>Testemunho</span>
                         </a>
                      </li>
                      <!-- https://api.whatsapp.com/send/?phone=5531975340765&text&type=phone_number&app_absent=0 -->
@@ -1071,6 +1071,73 @@
                               Estava procurando um Informação que me ajudasse a tratar de um assunto
                               especifico de contabilidade e Finanças encontrei o e-book perfeito aqui,
                               e com um ótimos desconto.
+                           </p>
+
+                           <div class="testimonial__stars">
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-half-fill"></i>
+                           </div>
+                        </article>
+                        <!-- Inicio Testemunho 05 -->
+                        <article class="testimonial__card swiper-slide">
+                           <img src="assets/img/testimonial-perfil-5.png" alt="image" class="testimonial__img">
+                           <h2 class="testimonial__title">Gabriel</h2>
+                           <p class="testimonial__description">
+                              Este site foi um achado, pois aqui encontrei um otimo material para minha empresa,
+                              fui muito bem atendido pelo Igor e recebi um ótimos desconto.
+                           </p>
+
+                           <div class="testimonial__stars">
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                           </div>
+                        </article>
+                        <!-- Inicio Testemunho 06 -->
+                        <article class="testimonial__card swiper-slide">
+                           <img src="assets/img/testimonial-perfil-6.png" alt="image" class="testimonial__img">
+                           <h2 class="testimonial__title">Bianca</h2>
+                           <p class="testimonial__description">
+                              Gostei bastante do material disponibilizado e encontrei e-books com um bom desconto,
+                              porem poderia ter mais e-books sobre tecnologia.
+                           </p>
+
+                           <div class="testimonial__stars">
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                           </div>
+                        </article>
+                        <!-- Inicio Testemunho 07 -->
+                        <article class="testimonial__card swiper-slide">
+                           <img src="assets/img/testimonial-perfil-7.png" alt="image" class="testimonial__img">
+                           <h2 class="testimonial__title">Daniel</h2>
+                           <p class="testimonial__description">
+                              Trabalho muito bem feito, atendendo todas as minhas expectativas e demandas. Custo-benefício
+                              também foi outro ponto que nos fez escolher a mindshift.
+                           </p>
+
+                           <div class="testimonial__stars">
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                              <i class="ri-star-fill"></i>
+                           </div>
+                        </article>
+                        <!-- Inicio Testemunho 08 -->
+                        <article class="testimonial__card swiper-slide">
+                           <img src="assets/img/testimonial-perfil-8.png" alt="image" class="testimonial__img">
+                           <h2 class="testimonial__title">Vanessa</h2>
+                           <p class="testimonial__description">
+                              Empresa altamente qualificada com serviços diferenciados
+                              e que agregaram muitíssimo valor para os meus negócios.
                            </p>
 
                            <div class="testimonial__stars">
