--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   <ul class="nav__list">
                      <!-- Home -->
                      <li class="nav__item">
-                        <a href="#home" class="nav__link">
+                        <a href="#home" class="nav__link active-link">
                            <i class="ri-home-line"></i>
                            <span>Home</span>
                         </a>
@@ -76,7 +76,7 @@
                      </li>
                   </ul>
                </div>
-
+               <!--==================== BUTTON ====================-->
                <div class="nav__actions">
                <!-- Botao de Pesquisa/search button -->
                <i class="ri-search-line search-button" id="search-button"></i>
@@ -1259,7 +1259,9 @@
          </footer>
 
          <!--========== SCROLL UP ==========-->
-         
+         <a href="#" class="scrollup" id="scroll-up">
+            <i class="ri-arrow-up-line"></i>
+         </a>
 
          <!--=============== SCROLLREVEAL ===============-->
          <script src=""></script>
