Atualização de códigos em css

--- a/index.html
+++ b/index.html
@@ -1017,8 +1017,7 @@
                            <h2 class="testimonial__title">Camila</h2>
                            <p class="testimonial__description">
                               E um ótmo site para comprar e-books, aqui encontrei
-                              conteudo sobre contabilidade para a minha empresaa
-                              e a compra foi muito fácil de fazer e tem ótimos descontos.
+                              conteudo sobre contabilidade para a minha empresa.
                            </p>
 
                            <div class="testimonial__stars">
@@ -1068,9 +1067,8 @@
                            <img src="assets/img/testimonial-perfil-4.png" alt="image" class="testimonial__img">
                            <h2 class="testimonial__title">Phillipe</h2>
                            <p class="testimonial__description">
-                              Estava procurando um Informação que me ajudasse a tratar de um assunto
-                              especifico de contabilidade e Finanças encontrei o e-book perfeito aqui,
-                              e com um ótimos desconto.
+                              Estava procurando uma Informação que me ajudasse a tratar de um assunto
+                              especifico de contabilidade e Finanças encontrei o e-book perfeito aqui.
                            </p>
 
                            <div class="testimonial__stars">
@@ -1087,7 +1085,7 @@
                            <h2 class="testimonial__title">Gabriel</h2>
                            <p class="testimonial__description">
                               Este site foi um achado, pois aqui encontrei um otimo material para minha empresa,
-                              fui muito bem atendido pelo Igor e recebi um ótimos desconto.
+                              fui muito bem atendido pelo Igor.
                            </p>
 
                            <div class="testimonial__stars">
